main.css
body {
  background-color: rgb(38, 41, 44);
  margin: 0;
  padding: 0;
  background-image: url(http://globalmedicalco.com/photos/globalmedicalco/2/8604.jpg);
  position: relative;
  height: 100vh;
}

/*Navbar style */
.nav {
  background-color: slategrey;
  border-bottom: 1px solid black;
}

.nav ul {
  list-style: none;
  text-align: center;
  padding: 0;
  margin: 0;
}

.nav li {
  line-height: 40px;
  height: 40px;
  /* background-color: slategray; */
  display: inline-block;
  width: 24%;

}

.nav a {
  text-decoration: none;
  display: inline-block;
  color: rgb(190, 35, 48);
}

.nav a:visited {
  color: firebrick;
}
/*                             */
/* Merchandise page styles */

div.merchCard {
  margin: 5px;
  border: 1px solid #ccc;
  border-radius: 4px;
  float: left;
  width: 30%;
}

div.merchCard img {
  width: 100%;
  height: auto;
}

#merchandise {
  margin: 0 auto;
  position: relative;
  width: 50%;
}

.text {
  background-color: rgb(197, 5, 5);
  color: white;
  font-size: 16px;
  padding: 16px 32px;
}

.merchPhoto {
  opacity: 1;
  display: block;
  width: 100%;
  height: auto;
  transition: .5s ease;
  backface-visibility: hidden;
}

.middle {
  transition: .5s ease;
  opacity: 0;
  position: absolute;
  transform: translate(75%, -250%);
  -ms-transform: translate(-50%, -50%)
}

.merchCard:hover .middle {
  opacity: 1;
}

.merchCard:hover .merchPhoto {
  opacity: 0.3;
}


#member-info-container {
  position: relative;
  right: -500px;
  bottom: 590px;
  font-family: 'Metal Mania', cursive;
  font-size: 220%;
  
}

#profile-container {
  margin: 30px;

}

.profile-card {
  border-style: solid;
  color:black;
  margin: -3%;
  padding: 3%;
  width: 400px;
  height: 400px;
  background-color: rgb(238, 28, 28);
}

#member-info-container {
  color: rgb(179, 170, 170);
}

/* album page styles -----------------------------------------------------*/

#albumCards {
  display: flex;
  flex-flow: row wrap;
  height: 100%;
  justify-content: space-evenly;
  text-align: center;
}

#albumCards h3 {
  color: rgb(179, 170, 170);
  background-color: rgba(38, 41, 44, 0.708);
}

#albumCards article {
  width: 40%;
}

#albumCards img{
  width: 100%;
}

/* individual album page styles------------------------------------------------ */

#album1, #album2, #album3, #album4, #album5 {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

#album1 div, #album2 div, #album3 div, #album4 div, #album5 div {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  text-align: center;
  width: 100%;
}

#album1 p, #album2 p, #album3 p, #album4 p, #album5 p {
  width: 40%;
  color: rgb(179, 170, 170);
  background-color: rgba(38, 41, 44, 0.708);
}

#album1 a, #album2 a, #album3 a, #album4 a, #album5 a {
  color: rgb(179, 170, 170);
  background-color: rgba(38, 41, 44, 0.708);
}

/* Home Page */
#group-photo img {
  display: block;
  margin: 0 auto;
}

#historyText {
  height: 12em;
  width: 50%;
  text-align: center;
  padding: 0;
  margin-top: 1em;
  margin-left: 21em;
  margin-bottom: 5em;
  overflow: auto;
  color: rgb(179, 170, 170);
  background-color: rgba(38, 41, 44, 0.708);
}

/* Footer ---------------------------------------------*/

footer {
  position: absolute;
  bottom:0;
  right: 0;
  left: 0;
  text-align: center;
  padding: 1em;
  color: rgb(179, 170, 170);
  background-color: rgba(38, 41, 44, 0.708);
}



.twitter, .instagram, .fclass {
  float: left;
  padding-right: 1em;
  text-decoration: none;
  color: white;
}

.facebook, .myspace {
  float: right;
  padding-right: 1em;
  text-decoration: none;
  color: white;
}

.instagram:visited {
  color: firebrick;
}

.myspace:visited {
  color: firebrick;
}

.facebook:visited {
  color: firebrick;
}

.twitter:visited {
  color: firebrick;
}

/* Break Points  */

@media (min-width: 800px) {
  #historyText {
    margin: 0 auto;
    margin-top: 1em;
    margin-bottom: 5em;
  }
}

@media (min-width: 600px) {
  #historyText {
    margin: 0 auto;
    margin-top: 1em;
    margin-bottom: 5em;
  }
}

@media (min-width: 400px) {

  #historyText {
    margin: 0 auto;
    margin-top: 1em;
    margin-bottom: 5em;
  }
}

